; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fuzzer/extr_fuzzer-sapi.c_fuzzer_request_startup.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fuzzer/extr_fuzzer-sapi.c_fuzzer_request_startup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FAILURE = common dso_local global i64 0, align 8
@SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fuzzer_request_startup() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @php_request_startup()
  %3 = load i64, i64* @FAILURE, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = call i32 (...) @php_module_shutdown()
  %7 = load i64, i64* @FAILURE, align 8
  %8 = trunc i64 %7 to i32
  store i32 %8, i32* %1, align 4
  br label %11

9:                                                ; preds = %0
  %10 = load i32, i32* @SUCCESS, align 4
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %9, %5
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i64 @php_request_startup(...) #1

declare dso_local i32 @php_module_shutdown(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
